tests/specs/ecosystem/jlarky/react_json_script/0_1_1.test
jlarky/react-json-script/0.1.1
-- deno.lock --
{
  "version": "3",
  "packages": {
    "specifiers": {
      "npm:react@^18.3.1": "npm:react@18.3.1"
    },
    "npm": {
      "js-tokens@4.0.0": {
        "integrity": "sha512-RdJUflcE3cUzKiMqQgsCu06FPu9UdIJO0beYbPhHN4k6apgJtifcoCtT9bcxOpYBtpD2kCM6Sbzg4CausW/PKQ==",
        "dependencies": {}
      },
      "loose-envify@1.4.0": {
        "integrity": "sha512-lyuxPGr/Wfhrlem2CL/UcnUc1zcqKAImBDzukY7Y5F/yQiNdko6+fRLevlw1HgMySw7f611UIY408EtxRSoK3Q==",
        "dependencies": {
          "js-tokens": "js-tokens@4.0.0"
        }
      },
      "react@18.3.1": {
        "integrity": "sha512-wS+hAgJShR0KhEvPJArfuPVN1+Hz1t0Y6n5jLrGQbkb4urgPE/0Rve+1kMB1v/oWgHgm4WIcV+i7F2pTVj+2iQ==",
        "dependencies": {
          "loose-envify": "loose-envify@1.4.0"
        }
      }
    }
  },
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS2503 [ERROR]: Cannot find namespace 'JSX'.
 */ export function JsonScript(props: JsonScriptProps): JSX.Element {
                                                        ~~~
    at file://<tmpdir>/index.ts:13:57

error: Type checking failed.

